Change phrasing a little bit

--- a/app/views/downloads/status.html.haml
+++ b/app/views/downloads/status.html.haml
@@ -4,5 +4,5 @@
 
 - if @request.ready?
   %div
-    %strong Download Url:
-    = link_to 'Download Zip', @request.download_url
+    %strong Download:
+    = link_to 'Get Zip', @request.download_url
