While we're generating the manifest we might as well compute the size of the download. Also display on the status page.

--- a/app/views/downloads/status.html.haml
+++ b/app/views/downloads/status.html.haml
@@ -6,3 +6,8 @@
   %div
     %strong Download:
     = link_to 'Get Zip', @request.download_url
+
+- if @request.total_size.present?
+  %div
+    %strong Approximate Size:
+    = number_to_human_size(@request.total_size)
